--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.1.0",
     "recharts": "^3.0.0",
     "pdfjs-dist": "4.4.168",
-    "@google/genai": "latest"
+    "@google/genai": "latest",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
